--- a/test/css/screen.css
+++ b/test/css/screen.css
@@ -77,7 +77,7 @@ form{overflow:visible}
 fieldset{margin-bottom:1em}
 legend{padding:0 .5em;font-size:.75em}
 label{line-height:1}
-input,select,textarea{margin-bottom:.5em;line-height:1}input:focus,select:focus,textarea:focus{outline:solid 1px #ecdb3c}
+input,select,textarea,button{float:left;clear:left;margin-bottom:.5em;line-height:1}input:focus,select:focus,textarea:focus,button:focus{outline:solid 1px #ecdb3c}
 input[type="text"],input[type="password"],input[type="select"],input[type="search"],input[type="url"],input[type="tel"],input[type="email"],input[type="date"],input[type="datetime"],input[type="month"],input[type="week"],input[type="time"],input[type="number"],input[type="range"],input[type="color"]{padding:.5em .5em .25em;border:solid 1px #999}
 input[type="radio"],input[type="checkbox"]{vertical-align:top;margin:.25em .5em 0 0}
 .radiogroup{padding:.5em 1em;margin:0 0 .5em;background:#f8f8f8}.radiogroup label{display:block;font-size:.875em;line-height:1.65}
@@ -90,9 +90,11 @@ header{padding:1em 0;margin:0 0 2em;color:#fff;background:#ecdb3c;border-bottom:
 header+div{margin:0 5% 14em}
 .test{padding:1em;margin:0 0 1em;border:solid 2px #f0f0f0;*zoom:1}.test:before,.test:after{display:table;content:'';line-height:0}
 .test:after{clear:both}
-.test h1{display:block;font-size:1.25em;border-bottom:solid 1px #f0f0f0}
+.test h1{display:block;font-size:.8125em;color:#999;border-bottom:solid 1px #f0f0f0;font-weight:normal;text-align:right;*zoom:1;line-height:1.75}.test h1:before,.test h1:after{display:table;content:'';line-height:0}
+.test h1:after{clear:both}
+.test h1 em{float:left;font-size:1.5em;font-style:normal;font-weight:bold;color:#555;line-height:1.25}
 .test .lab{float:left;width:70%;margin:0 5% 0 0;min-height:4em}
-.test .triggers{float:left;width:25%;min-height:4em}.test .triggers button{width:100%;font-size:.875em;margin:0 0 .5em}
+.test .triggers{float:left;width:25%;min-height:4em}.test .triggers button{width:100%;font-size:.85em}
 .red{color:#db3751}
 .green{color:#33c98e}
 .source>span{font-weight:bold;color:#061017}
