--- a/test/css/screen.css
+++ b/test/css/screen.css
@@ -1,49 +1,38 @@
-article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block}
-audio,canvas,video{display:inline-block;*display:inline;*zoom:1}
+article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}
+audio,canvas,video{display:inline-block}
 audio:not([controls]){display:none;height:0}
-[hidden]{display:none}
-html{font-size:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}
-html,button,input,select,textarea{font-family:sans-serif}
+[hidden],template{display:none}
+html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
 body{margin:0}
+a{background:transparent}
 a:focus{outline:thin dotted}
-a:hover,a:active{outline:0}
+a:active,a:hover{outline:0}
 h1{font-size:2em;margin:.67em 0}
-h2{font-size:1.5em;margin:.83em 0}
-h3{font-size:1.17em;margin:1em 0}
-h4{font-size:1em;margin:1.33em 0}
-h5{font-size:.83em;margin:1.67em 0}
-h6{font-size:.75em;margin:2.33em 0}
 abbr[title]{border-bottom:1px dotted}
 b,strong{font-weight:bold}
-blockquote{margin:1em 40px}
 dfn{font-style:italic}
+hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}
 mark{background:#ff0;color:#000}
-p,pre{margin:1em 0}
-pre,code,kbd,samp{font-family:monospace,serif;_font-family:'courier new',monospace;font-size:1em}
-pre{white-space:pre;white-space:pre-wrap;word-wrap:break-word}
-q{quotes:none}
-q:before,q:after{content:'';content:none}
-small{font-size:75%}
+code,kbd,pre,samp{font-family:monospace,serif;font-size:1em}
+pre{white-space:pre-wrap}
+q{quotes:"\201C" "\201D" "\2018" "\2019"}
+small{font-size:80%}
 sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}
 sup{top:-0.5em}
 sub{bottom:-0.25em}
-dl,menu,ol,ul{margin:1em 0}
-dd{margin:0 0 0 40px}
-menu,ol,ul{padding:0 0 0 40px}
-nav ul,nav ol{list-style:none;list-style-image:none}
-img{border:0;-ms-interpolation-mode:bicubic;}
+img{border:0}
 svg:not(:root){overflow:hidden}
 figure{margin:0}
-form{margin:0}
 fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:.35em .625em .75em}
-legend{border:0;padding:0;white-space:normal;*margin-left:-7px;}
-button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline;*vertical-align:middle;}
-button,input{line-height:normal;}
-button,input[type="button"],input[type="reset"],input[type="submit"]{cursor:pointer;-webkit-appearance:button;*overflow:visible;}
-button[disabled],input[disabled]{cursor:default}
-input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0;*height:13px;*width:13px;}
+legend{border:0;padding:0;}
+button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}
+button,input{line-height:normal}
+button,select{text-transform:none}
+button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer;}
+button[disabled],html input[disabled]{cursor:default}
+input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0;}
 input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}
-input[type="search"]::-webkit-search-decoration,input[type="search"]::-webkit-search-cancel-button{-webkit-appearance:none}
+input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}
 button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}
 textarea{overflow:auto;vertical-align:top;}
 table{border-collapse:collapse;border-spacing:0}
@@ -77,10 +66,12 @@ form{overflow:visible}
 fieldset{margin-bottom:1em}
 legend{padding:0 .5em;font-size:.75em}
 label{line-height:1}
-input,select,textarea,button{float:left;clear:left;margin-bottom:.5em;line-height:1}input:focus,select:focus,textarea:focus,button:focus{outline:solid 1px #ecdb3c}
+input,select,textarea,button,label{float:left;clear:left;margin-bottom:.5em;line-height:1}input:focus,select:focus,textarea:focus,button:focus,label:focus{outline:solid 1px #ecdb3c}
 input[type="text"],input[type="password"],input[type="select"],input[type="search"],input[type="url"],input[type="tel"],input[type="email"],input[type="date"],input[type="datetime"],input[type="month"],input[type="week"],input[type="time"],input[type="number"],input[type="range"],input[type="color"]{padding:.5em .5em .25em;border:solid 1px #999}
 input[type="radio"],input[type="checkbox"]{vertical-align:top;margin:.25em .5em 0 0}
-.radiogroup{padding:.5em 1em;margin:0 0 .5em;background:#f8f8f8}.radiogroup label{display:block;font-size:.875em;line-height:1.65}
+.radiogroup{padding:.5em 1em;margin:0 0 .5em;background:#f8f8f8;*zoom:1}.radiogroup:before,.radiogroup:after{display:table;content:'';line-height:0}
+.radiogroup:after{clear:both}
+.radiogroup label{display:block;font-size:.875em;line-height:1.65}
 .radiogroup input{padding:0}
 input[type="submit"],input[type="reset"],input[type="button"],button{padding:.5em 2em .25em;background:#f8f8f8;border:solid 1px #f0f0f0;color:#333;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px}input[type="submit"]:hover,input[type="reset"]:hover,input[type="button"]:hover,button:hover,input[type="submit"].focus,input[type="reset"].focus,input[type="button"].focus,button.focus{background:#ecdb3c;border:solid 1px #d7d7d7;-webkit-box-shadow:0 1px 1px 0 rgba(0,0,0,0.15);-moz-box-shadow:0 1px 1px 0 rgba(0,0,0,0.15);box-shadow:0 1px 1px 0 rgba(0,0,0,0.15);background-color:#ededed;background-repeat:repeat-x;background-image:-moz-linear-gradient(180deg, #f8f8f8, #ededed);background-image:-webkit-linear-gradient(180deg, #f8f8f8, #ededed);background-image:-o-linear-gradient(180deg, #f8f8f8, #ededed);background-image:linear-gradient(180deg, #f8f8f8, #ededed)}
 input[type="submit"]:active,input[type="reset"]:active,input[type="button"]:active,button:active{-webkit-box-shadow:inset 0 1px 2px 0 rgba(0,0,0,0.1);-moz-box-shadow:inset 0 1px 2px 0 rgba(0,0,0,0.1);box-shadow:inset 0 1px 2px 0 rgba(0,0,0,0.1)}
@@ -99,6 +90,3 @@ header+div{margin:0 5% 14em}
 .green{color:#33c98e}
 .source>span{font-weight:bold;color:#061017}
 .highlighted{-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;background:#33c98e}
-footer{position:fixed;bottom:0;left:0;width:94%;padding:1em 3%;background:#061017;color:#f0f0f0;-webkit-box-shadow:0 0 10px 0 rgba(0,0,0,0.75);-moz-box-shadow:0 0 10px 0 rgba(0,0,0,0.75);box-shadow:0 0 10px 0 rgba(0,0,0,0.75);*zoom:1}footer:before,footer:after{display:table;content:'';line-height:0}
-footer:after{clear:both}
-footer textarea{display:block;float:left;height:10em;width:100%;margin:0;padding:0;border:0;background:transparent;color:#ecdb3c;font-family:Courier,Georgia,serif;font-size:.875em}
