--- a/test/css/less/screen.less
+++ b/test/css/less/screen.less
@@ -1,7 +1,7 @@
 /*
-Author: Able Sense Media
-Web: ablesense.com
-Date of creation: 01/04/2013
+Author: Glenn Naessens
+Web: glennnaessens.com
+Date of creation: 04/09/2013
 */
 
 @import 'normalize.less';
